[package]
name = "bf"
version = "0.1.0"
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]

[dependencies]
memmap = "0.7.0"

[dependencies.amd64]
git = "https://git.hunterpraska.com/hunter/incarnation"

[patch."https://git.hunterpraska.com/hunter/incarnation"]
amd64 = { path = "../../../Projects/compilers/incarnation/amd64" }
